src/app/alarm/page.module.css
.container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.container div {
  font-size: var(--big-text-font-size);
  color: var(--black-font-color);
}

.container > div::after {
  content: url(/images/invalid.svg);
  display: inline-block;
  position: relative;
  top: 0.5rem;
  margin-left: 0.5rem;
}

